<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResultActivity">

    <TextView
        android:text="Seu IMC é"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_200"
        />

    <TextView
        android:id="@+id/textview_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="16dp"
        android:textSize="36sp"/>

    <TextView
        android:id="@+id/tv_classificacao"
        android:layout_margin="8dp"
        android:text="Classificação: Normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAlignment="center"
        />

    <TextView
        android:layout_margin="8dp"
        android:text= "@string/table1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        />

    <TextView
        android:layout_margin="8dp"
        android:text= "@string/table2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        />

    <TextView
        android:layout_margin="8dp"
        android:text= "@string/table3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        />

    <TextView
        android:layout_margin="8dp"
        android:text= "@string/table4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        />

    <TextView
        android:layout_margin="8dp"
        android:text= "@string/table5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"

        />


</LinearLayout>